force-app/main/default/objects/Territory__c/fields/MSA__c.field-meta.xml
<CustomField>
    <fullName>MSA__c</fullName>
    <description>Metropolitan Statistical Area, used by Alec in Marketing Dept.</description>
    <label>MSA</label>
    <length>100</length>
    <type>Text</type>
</CustomField>