force-app/main/default/objects/Territory__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Orange County</fullName>
            </value>
            <value>
                <fullName>Los Angeles</fullName>
            </value>
            <value>
                <fullName>Manhattan North</fullName>
            </value>
            <value>
                <fullName>Manhattan South</fullName>
            </value>
            <value>
                <fullName>Atlanta</fullName>
            </value>
            <value>
                <fullName>South Florida</fullName>
            </value>
            <value>
                <fullName>Central Florida</fullName>
            </value>
            <value>
                <fullName>New Jersey</fullName>
            </value>
            <value>
                <fullName>Bay Area</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>