force-app/main/default/objects/Territory__c/fields/Territory_V1__c.field-meta.xml
<CustomField>
    <fullName>Territory_V1__c</fullName>
    <description>territory before July 2020</description>
    <label>Territory V1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>