force-app/main/default/objects/Territory__c/listViews/All_Territories.listView-meta.xml
<ListView>
    <fullName>All_Territories</fullName>
    <columns>NAME</columns>
    <columns>Territory__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Territory__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Territories</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>