force-app/main/default/objects/Territory__c/listViews/NY_Manhattan_South.listView-meta.xml
<ListView>
    <fullName>NY_Manhattan_South</fullName>
    <columns>NAME</columns>
    <columns>County__c</columns>
    <columns>Territory__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Territory__c</field>
        <operation>equals</operation>
        <value>Manhattan South</value>
    </filters>
    <label>NY-Manhattan South</label>
</ListView>